--- a/git-test.html
+++ b/git-test.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>GIT Test</title>
   </head>
   <body>
     <h1>Learn GIT from camp404.com</h1>
+    <p>Testing modify file version 1.1</p>
   </body>
 </html>
